 * oggenc: support for 32 bit Wave files (#1326)
 * oggenc: --ignorelength; support for Wave files > 4 GB (#1326)
 * oggenc: split help text into manageable chunks to help translators (#1385)
 * oggenc: --utf8 command similar to vorbiscomment's --raw (#268)
 * oggenc: fixed the encoding of extended characters in Windows (#268)
 * oggenc: validate raw UTF-8 sent to oggenc (#268)
 * oggenc: include the PID in the RNG seed to get a unique serial (#1432)
 * ogginfo: support for information in Kate streams (#1360)
 * vcut: 64 bit fixes (#1366)
 * vorbiscomment: correct memory allocation (#472)
 * vorbiscomment: validate raw UTF-8 sent to vorbiscomment (#268)
 * vorbiscomment: fix segfault when using --tag (#1439)

vorbis-tools 1.2.0 -- 2008-02-21

 * FLAC support now relies solely on libFLAC
 * Support for large files (#879)
 * Fixed acinclude.m4 to properly support --no switches
 * ogg123: added remote control support (#1109)
 * ogg123: fixed a bug in esd when pressing CTRL + C (#715)
 * ogg123: fixed a type mismatch in option parsing for 64 bit systems
 * ogg123: configuration no longer hardcoded to /etc
 * ogg123: compiles with older versions of libcurl
 * ogg123: fixed crash when playing 1-channel FLAC (#535)
 * ogg123: fixed floating-point exception when playing corrupt FLAC (#1119)
 * oggdec: limited support for chained Ogg bitstreams
 * oggdec: support decoding of multiple files into a single one
 * oggenc: -k, switch for Skeleton bitstream encoding
 * oggenc: fixed issues with Skeleton on big endian systems
 * oggenc: proper 5.1 channel mapping support
 * oggenc: FLAC module does not confuse every Ogg file as its own
 * oggenc: compiles with older versions of libvorbis
 * ogginfo: recognizes Skeleton, Dirac, FLAC and Kate bitstreams
 * vcut: solved issues described in ticket #1313
 * vorbiscomment: support for creation of long comments
 * vorbiscomment: support for multiplexed Vorbis
 * Several minor bug fixes